syntax = "proto3";
option csharp_namespace = "Web.Api.Identity";
package Web.Api.Identity;
import "google/protobuf/timestamp.proto";
message RefreshToken {
    string Token = 1;
    google.protobuf.Timestamp Expires = 2;
    int32 UserId = 3;
    bool Active = 4;
    string RemoteIpAddress = 5;
}