syntax = "proto3";
option csharp_namespace = "Web.Api.Identity";
package Web.Api.Identity;
import "Protos/refreshToken.proto";
message User {
    int32 id = 1;
    string identityId = 2;
    string firstName = 3;
    string lastName = 4;
    string userName = 5;
    string email = 6;
    string phoneNumber = 7;
    repeated Web.Api.Identity.RefreshToken refreshTokens = 8;
}